Spacing issue in market name

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/marketselector/_marketselector.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/marketselector/_marketselector.scss
@@ -67,7 +67,7 @@
         }
         i.icon-ver-line {
             @include padding-left(8px);
-            @include margin-left(6px);
+            @include margin-left(4px);
             border-left: 1px solid $color-congress-blue;
             &:hover {
                 border-left: 1px solid $color-sky-blue;
